unpackaged/objects/copadoconnect__FieldMapping__c.object
<CustomObject>
	<fields>
		<fullName>copadoconnect__Copado_Integration__c</fullName>
		<label>Copado Integration</label>
		<referenceTo>copadoconnect__Copado_Integration__c</referenceTo>
		<relationshipLabel>Field Mappings</relationshipLabel>
		<relationshipName>Field_Mappings</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Copado_Is_Creatable__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Is Creatable</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Copado_Is_Updatable__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Is Updatable</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Direction__c</fullName>
		<formula>IF( copadoconnect__Inbound__c &amp;&amp;  copadoconnect__Outbound__c , &quot;Bidirectional&quot;, IF( copadoconnect__Inbound__c, &quot;Inbound&quot;, IF( copadoconnect__Outbound__c, &quot;Outbound&quot;, &quot;&quot;)))</formula>
		<label>Direction</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoconnect__External_Field_Name__c</fullName>
		<label>Provider Field</label>
		<length>255</length>
		<required>true</required>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoconnect__External_Field_Type__c</fullName>
		<label>Provider Field Type</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoconnect__External_Object_Record_Type_Label__c</fullName>
		<formula>copadoconnect__Object_Mapping__r.copadoconnect__External_Object_Record_Type_Label__c</formula>
		<label>Provider Type</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoconnect__External_Object_Record_Type__c</fullName>
		<formula>copadoconnect__Object_Mapping__r.copadoconnect__External_Object_Record_Type__c</formula>
		<label>Provider Type</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoconnect__External_Object__c</fullName>
		<formula>copadoconnect__Object_Mapping__r.copadoconnect__External_Object_Name__c</formula>
		<label>Provider Object</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Inbound__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Inbound</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Named_Credential__c</fullName>
		<formula>copadoconnect__Copado_Integration__r.copadoconnect__Named_Credential__c</formula>
		<label>Named Credential</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Object_Mapping__c</fullName>
		<label>Object Mapping</label>
		<referenceTo>copadoconnect__ObjectMapping__c</referenceTo>
		<relationshipLabel>Field Mappings</relationshipLabel>
		<relationshipName>Field_Mappings</relationshipName>
		<relationshipOrder>1</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Outbound__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Outbound</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Provider__c</fullName>
		<formula>TEXT(copadoconnect__Copado_Integration__r.copadoconnect__Provider__c)</formula>
		<label>Provider</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Salesforce_Field_Name__c</fullName>
		<label>Copado Field</label>
		<length>255</length>
		<required>true</required>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Salesforce_Field_Type__c</fullName>
		<label>Copado Field Type</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Salesforce_Object_Record_Type__c</fullName>
		<formula>copadoconnect__Object_Mapping__r.copadoconnect__Salesforce_Object_Record_Type__c</formula>
		<label>Copado Record Type</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Salesforce_Object__c</fullName>
		<formula>copadoconnect__Object_Mapping__r.copadoconnect__Salesforce_Object_Name__c</formula>
		<label>Copado Object</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Status__c</fullName>
		<label>Status</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>Mapped</fullName>
					<default>true</default>
					<label>Mapped</label>
				</value>
				<value>
					<fullName>Failed</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<label>Field Mapping</label>
	<nameField>
		<displayFormat>FM-{0000}</displayFormat>
		<label>Field Mapping Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Field Mappings</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>